width bug and viewport overflow solved

--- a/docs/index.css
+++ b/docs/index.css
@@ -1,10 +1,10 @@
 body{
 	background-color:white;
-	width: 95%;
+	width: 98%;
 }
 nav{
 	background-color: red;
-	width: 90%;
+	width: 100%;
 	text-align:center;
 }
 #navbar a {
@@ -35,7 +35,7 @@ header{
 	padding-right:5px;
 }
 #sprinter{
-	width: 90%;
+	width: 100%;
 	height:90%;
 	object-fit:contain;
 }
@@ -102,9 +102,9 @@ footer{
 }
 @media screen and (min-width: 600px){
 	body{
-		width:90%;
+		width:98%;
 	}
 	footer{
-		width:90%;
+		width:100%;
 	}
 }
